--- a/index.html
+++ b/index.html
@@ -191,6 +191,15 @@
             </ul>
         </nav>
     </div>
+    <nav>
+    <ul>
+        <li><a href="#accueil">Accueil</a></li>
+        <li><a href="#galerie">Galerie</a></li>
+        <li><a href="#apropos">À propos</a></li>
+        <li><a href="#contact">Contact</a></li> <!-- 👈 AJOUT -->
+    </ul>
+</nav>
+
 </header>
 
 <section id="accueil" class="section accueil">
