--- a/index.html
+++ b/index.html
@@ -269,6 +269,19 @@
     <div class="container">
         <p>&copy; 2025 Ma Galerie Naturelle | Tous droits réservés</p>
     </div>
+    <section id="contact" class="section contact">
+    <div class="container">
+        <h2>Contact</h2>
+        <p>Une question ? Une demande spéciale ? N'hésitez pas à m'écrire !</p>
+        <form class="contact-form">
+            <input type="text" name="nom" placeholder="Votre nom" required>
+            <input type="email" name="email" placeholder="Votre email" required>
+            <textarea name="message" rows="5" placeholder="Votre message" required></textarea>
+            <button type="submit">Envoyer</button>
+        </form>
+    </div>
+</section>
+
 </footer>
 
 <script>
