--- a/index.html
+++ b/index.html
@@ -210,6 +210,8 @@
                 <li><a href="#galerie">Galerie</a></li>
                 <li><a href="#apropos">À propos</a></li>
                 <li><a href="#contact">Contact</a></li>
+                <li><a href="mailto:beltransoan@gmail.com">Me contacter</a></li>
+
             </ul>
         </nav>
     </div>
