--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       <li><a href="#accueil">Accueil</a></li>
       <li><a href="#galerie">Galerie</a></li>
       <li><a href="#apropos">À propos</a></li>
-      <li><a href="mailto:beltransoan@gmail.com">Me contacter</a></li>
+      <li><a href="mailto:https://mail.google.com/mail/u/0/?hl=fr#inbox">Me contacter</a></li>
     </ul>
   </nav>
 </header>
