--- a/index.html
+++ b/index.html
@@ -204,6 +204,23 @@
   <h2>À propos</h2>
   <p>Nous proposons des photos numériques de qualité professionnelle, capturées dans des paysages naturels à travers le monde.</p>
 </section>
+<section id="contact">
+  <h2>Contactez-moi</h2>
+  <form action="https://formsubmit.co/tonadresse@email.com" method="POST">
+    <input type="hidden" name="_captcha" value="false">
+    
+    <label for="name">Nom :</label><br>
+    <input type="text" id="name" name="name" required><br><br>
+
+    <label for="email">Email :</label><br>
+    <input type="email" id="email" name="email" required><br><br>
+
+    <label for="message">Message :</label><br>
+    <textarea id="message" name="message" rows="5" required></textarea><br><br>
+
+    <button type="submit">Envoyer</button>
+  </form>
+</section>
 
 <footer>
   <p>&copy; 2025 Ma Galerie Naturelle | Tous droits réservés</p>
