--- a/index.html
+++ b/index.html
@@ -246,14 +246,7 @@
   <h2>Contactez-moi</h2>
   <form action="https://formsubmit.co/beltransoan@gmail.com" method="POST" class="contact-form">
     <input type="hidden" name="_captcha" value="false">
-    <label for="name">Nom :</label>
-    <input type="text" id="name" name="name" required>
-
-    <label for="email">Email :</label>
-    <input type="email" id="email" name="email" required>
-
-    <label for="message">Message :</label>
-    <textarea id="message" name="message" rows="5" required></textarea>
+    <input type="email" name="email">
 
     <button type="submit">Envoyer</button>
   </form>
