--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 
 <section id="contact" class="contact-section">
   <h2>Contactez-moi</h2>
-  <form action="https://formsubmit.co/beltransoan@gmail.com" method="POST" class="contact-form">
+  <form action="https://formsubmit.co/3ad5c8544ef5487639d917aa34cc17fd" method="POST" class="contact-form">
     <input type="hidden" name="_captcha" value="false">
     <input type="email" name="email">
 
