--- a/index.html
+++ b/index.html
@@ -244,6 +244,8 @@
 
 <section id="contact" class="contact-section">
   <h2>Contactez-moi</h2>
+  <a href="mailto:beltransoan@gmail.com?
+    subject=subject texte"
   
 </section>
 
