--- a/index.html
+++ b/index.html
@@ -245,7 +245,8 @@
 <section id="contact" class="contact-section">
   <h2>Contactez-moi</h2>
   <a href="mailto:beltransoan@gmail.com?
-    subject=subject texte"
+    subject=subject texte">
+    your visible link text</a>
   
 </section>
 
